@@ -1,4 +1,5 @@
 
+  * Implemented the option to add a random track if the playlist is empty
   * Fixed bug in manual cover downloader when the results where below 10
   * The order of radiostations preference are saved
   * Added an option to allow albums be ordered by Year
